--- a/ejercicio6ParqueNAtural/index.html
+++ b/ejercicio6ParqueNAtural/index.html
@@ -11,16 +11,27 @@
 
 <body>
     <h1>Parque natural Sierra Bicuerca</h1>
-    <div><lo>
-        <li>inicio</li>
-        <li>Especies</li>
-        <li>Reservas</li>
-        <li>Galería</li>
-    </lo>
-</div>
+    <div>
+        <nav>
+            <ul>
+                    <li><a href="./index.html">inicio</a></li>
+                    <li><a href="./especies.html">Especies</a></li>
+                    <li>Reservas</li>
+                    <li>Galería</li>
+                </ul>
+        </nav>
+        
+    </div>
     <h2>Bienvenidos al parque natural</h2>
-    <p>El parque natural de Sierra Bicuerca, reserva de la biosfera,es referencia obligada del bosque y matorral mediterraneo interior, y habitat de la fauna y flora auctóctona.  </p>
-<p>Fue declarado parque natural en 1983, con una superficie de 9.090 Has. siendo uno de los emclaves mas extensos de la Comunidad Valenciana.</p>
+    <p>El parque natural de Sierra Bicuerca, reserva de la biosfera,es referencia obligada del bosque y matorral
+        mediterraneo interior, y habitat de la fauna y flora auctóctona. </p>
+    <p>Fue declarado parque natural en 1983, con una superficie de 9.090 Has. siendo uno de los emclaves mas extensos de
+        la Comunidad Valenciana.Con un gran espesor de vegetación, y varios riachuelos ofrecen un clima ideal para las
+        especies terrestres y acuáticas.Sus bosques, de carrasca y pino, albergan una amplia colonia de aves.</p>
+    <p>Entre las especies del parque podemos destacar una de las últimas colonias de buitre leonado de la zona. También
+        nos veremos constantemente sobrevolados por el halcón peregrino o el águila perdicera. Al acercarnos a los
+        riachuelos, veremos numerosas pisadas de jabalís y ciervos, y si no hacemos mucho ruido, no es difícil encontrar
+        alguno abrevando bajo la atenta mirada del martín pescador, esperando a la despistada trucha.</p>
 </body>
 
 </html>
